--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --background-gradient-start: #0a031a;
+  --background-gradient-end: #141414;
+  --background-gradient: linear-gradient(
+    to bottom,
+    var(--background-gradient-start),
+    var(--background-gradient-end)
+  );
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,7 +23,8 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: var(--background-gradient);
+  background-attachment: fixed;  /* Makes the gradient fixed, so it doesn't scroll */
   font-family: Arial, Helvetica, sans-serif;
 }
 
