Update :root to tell browsers we are in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  color-scheme: dark;
   --background: #ffffff;
   --foreground: #171717;
   --background-gradient-start: #0a031a;
