--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,33 @@ body {
   transform-origin: top left;
   transition: transform 0.3s ease;
 }
+
+.gradient-rotate {
+  position: relative;
+  overflow: hidden;
+  z-index: -2;
+}
+
+.gradient-rotate::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  opacity: 0.1;
+  height:50%;
+  transform-origin: center;
+  animation: animate-rotate 10s linear infinite;
+  z-index: -1;
+}
+
+@keyframes animate-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
