Add animation for basic text shimmer effect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,18 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.animate-shimmer {
+  color: grey;
+  display: inline-block;
+  mask: linear-gradient(-60deg, #000 30%, #0005, #000 70%) right/350% 100%;
+  animation: shimmer-animation 2.5s infinite;
+  font-size: 50px;
+  max-width: 200px;
+}
+
+@keyframes shimmer-animation {
+  100% {
+    mask-position: left
+  }
+}
