--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,3 +103,10 @@ body {
     mask-position: left
   }
 }
+
+.doc-bkg-img {
+  background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/papyrus-dark.png');
+  background-size: auto;
+  background-repeat: repeat;
+  background-size: 25%;
+}
