--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,8 +105,7 @@ body {
 }
 
 .doc-bkg-img {
-  background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/papyrus-dark.png');
-  background-size: auto;
-  background-repeat: repeat;
-  background-size: 25%;
+  background-image: url('../public/blob-bkg.svg');
+  background-repeat: repeat-y;
+  background-size: cover;
 }
